--- a/techno/index.html
+++ b/techno/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="./vue.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>Techno</title>
 </head>
+
 <body>
 
   <div id="app">
-    <h1>{{mensagem}}</h1>
+    <section class="produtos">
+      <div v-for="produto in produtos" :key="produto.id" class="produto">
+        <img :src="produto.img" :alt="produto.nome" class="produto_img">
+        <div class="produto_info">
+          <span class="produto_preco">{{produto.preco}}</span>
+          <h2 class="produto_titulo">{{produto.nome}}</h2>
+        </div>
+      </div>
+    </section>
+
   </div>
   <script src="./app.js"></script>
-  
+
 </body>
+
 </html>
