--- a/techno/index.html
+++ b/techno/index.html
@@ -17,13 +17,7 @@
 
     <header class="header">
       <img class="logo" src="./assets/techno.svg" alt="Techno">
-      <div class="carrinho_menu">{{carrinhoTotal | numeroPreco }} | {{carrinho.length}}</div>
-      <ul>
-        <li v-for="(item, index) in carrinho">
-          <p>{{item.nome}} {{index}} </p>
-          <button @click="removerItem(index)">X</button>
-        </li>
-      </ul>
+      <div @click="carrinhoAtivo = true" class="carrinho_menu">{{carrinhoTotal | numeroPreco }} | {{carrinho.length}}</div>
     </header>
 
     <section class="produtos">
@@ -60,6 +54,25 @@
           </ul>
         </div>
 
+      </div>
+    </section>
+
+    <section class="carrinho_modal" :class="{ativo: carrinhoAtivo}" @click="fecharModalCarrinho">
+      <div class="carrinho_container">
+        <button class="modal_fechar" @click="carrinhoAtivo = false">X</button>
+        <h2 class="carrinho_titulo">Carrinho</h2>
+        <div v-if="carrinho.length > 0">
+          <ul class="carrinho_lista">
+            <li v-for="item, index in carrinho" class="carrinho_item">
+              <p>{{item.nome}}</p>
+              <p class="carrinho_preco">{{item.preco | numeroPreco}}</p>
+              <button class="carrinho_remover" @click="removerItem(index)">X</button>
+            </li>
+          </ul>
+          <p class="carrinho_total">{{carrinhoTotal | numeroPreco}}</p>
+          <button class="carrinho_finalizar">Finalizar Compra</button>
+        </div>
+        <p v-else>O carrinho está vazio</p>
       </div>
     </section>
 
